# alphafold-on-fire

./: .gitignore  CONTRIBUTING.md  README.md  docker-compose.yaml
.github/: dependabot.yaml  dependabot.yml
.github/linters/: .isort.cfg  .mypy.ini
.github/workflows/: azure-static-web-apps-jolly-stone-08218fc03.yml  azure-static-web-apps.yaml  build-and-push-backend.yaml  codeql-analysis.yaml  codeql-analysis.yml  lint-backend.yaml  lint-frontend.yaml  super-linter.yaml  test-backend.yaml  test-frontend.yaml
backend/: .flake8  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml
backend/alembic/: README.md  env.py
backend/app/: config.py  database.py  main.py  security.py
backend/app/routers/: health.py
backend/app/schemas/: __init__.py  health.py
backend/keycloak/: dev-realm.json
backend/tests/: test_main.py  test_security.py
backend/tests/routers/: test_health.py
frontend/: Dockerfile  docker-compose.yaml  package-lock.json  package.json  playwright.config.ts  tailwind.config.js
frontend/src/: app.html  hooks.server.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/tests/: test.ts
