[tool.poetry]
name = "alphafold-on-fire"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.95.1"
uvicorn = {version = "0.21.1", extras = ["standard"]}
sqlalchemy = "2.0.11"
asyncpg = "0.27.0"
alembic = "1.10.4"
python-jose = {version = "3.3.0", extras = ["cryptography"]}
requests = "2.29.0"
pyfirecrest = "1.3.0"
requests-cache = "1.0.1"

[tool.poetry.group.dev.dependencies]
flake8 = "6.0.0"
mypy = "1.2.0"
pytest-cov = "4.0.0"
pytest = "7.3.1"
black = "23.3.0"
isort = "5.12.0"
httpx = "0.24.0"

[tool.isort]
profile = "black"

[tool.mypy]
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
