[tool.poetry]
name = "alphafold-on-fire"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.103.1"
uvicorn = {version = "0.23.2", extras = ["standard"]}
sqlalchemy = "2.0.20"
asyncpg = "0.28.0"
alembic = "1.12.0"
python-jose = {version = "3.3.0", extras = ["cryptography"]}
requests = "2.31.0"
pyfirecrest = "1.5.1"
requests-cache = "1.1.0"
pydantic-settings = "2.0.3"

[tool.poetry.group.dev.dependencies]
mypy = "1.5.1"
pytest-cov = "4.1.0"
pytest = "7.4.2"
black = "23.9.1"
httpx = "0.24.1"
ruff = "0.0.290"

[tool.ruff]
select = [
  "E",   # pycodestyle error
  "F",   # pyflakes
  "C90", # mccabe
  "I",   # isort
  "N",   # pep8-naming
  "UP",  # pyupgrade
  "G",   # flake8-logging-format
  "PT",  # flake8-pytest-style
  "PLE", # pylint error
  "RUF", # ruff specific
]

[tool.mypy]
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
